Wed Jan  6 12:27:52 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Logger/Logger_Service.cpp:
          Changed the commandline flags, to:
          -CIAOLogLevel
          -CIAOTraceEnable
          -CIAOLogFile

        * DAnCE/Logger/Logger_Service.cpp
          Changed the commandline flags, to:
          -DAnCELogLevel
          -DAnCETraceEnable
          -DAnCELogFile

Wed Jan  6 10:39:52 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DDS_Base_Connector_T.h:
        * connectors/dds4ccm/impl/ndds/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_TopicBase_Connector_T.cpp:
          Separate DDS lifecycle from CCM lifecycle. Implemented the
          various DANCE start/shutdown steps.

        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
          Implemented set_listener method.

        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.cpp:
          Do not use listener when nil.

        * connectors/dds4ccm/impl/ndds/Topic.cpp:
          Added traces. get_listener should throw a
          no implement exception.

Wed Jan  6 09:39:37 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DDS_TopicBase_Connector_T.h:
        * connectors/dds4ccm/impl/ndds/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
          Separate DDS lifecycle from CCM lifecycle. DomainParticipant
          now have a configuration_complete, an activate, a passivate
          and a remove method.

        * connectors/dds4ccm/impl/ndds/Topic.cpp:
          Implemented set_listener method.

Tue Jan  5 19:25:18 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Base/Hello_Base.mpc
        * connectors/dds4ccm/examples/Shapes/Base/Shapes_Base.mpc
        * connectors/dds4ccm/tests/CSLDeadline/Base/CSL_DeadlineTest_Base.mpc