@@ -1,3 +1,8 @@
+Wed Jan  6 12:51:52 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.cpp:
+          Improved debug output
+
 Wed Jan  6 12:27:52 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Logger/Logger_Service.cpp:
